# ytdlp_tui

./: .gitignore  LICENSE  README.md  launch.bat  pyproject.toml  yt-dlp-launcher.ps1
.github/workflows/: release.yml
docs/: implementation-roadmap.md  release-process.md
scripts/: package_release.py
scripts/windows/: install-ytdlp-tui.ps1  uninstall-ytdlp-tui.ps1  update-ytdlp-tui.ps1
src/ytdlp_tui/: __init__.py  __main__.py  app.py  main.py  windows_uninstall.py  windows_update.py
src/ytdlp_tui/core/: config.py  dependencies.py  downloads.py  models.py  paths.py  platform.py  releases.py  runner.py  windows_installer.py
src/ytdlp_tui/ui/: main_screen.py  settings_screen.py
src/ytdlp_tui/ui/widgets/: url_input.py
