[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdlp-tui"
version = "0.1.8"
description = "Cross-platform Textual UI for yt-dlp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.58,<1.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.19.0",
]

[project.scripts]
ytdlp-tui = "ytdlp_tui.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
